feat: add home page design

--- a/index.html
+++ b/index.html
@@ -24,26 +24,28 @@
         <section class="modal">
             <div class="modal__content">
                 <h1 class="modal__title">K!sbag Design Studio</h1>
-                <nav class="midal-navbar ul modal__list">
-                    <li class="modal__list__item">
-                        <a href="index.html" class="modal__link">Home</a>
-                    </li>
-                    <li class="modal__list__item">
-                        <a href="works.html" class="modal__link">Works</a>
-                    </li>
-                    <li class="modal__list__item">
-                        <a href="logos.html" class="modal__link"
-                            >Logo Collection</a
-                        >
-                    </li>
-                    <li class="modal__list__item">
-                        <a href="about.html" class="modal__link"
-                            >About & Contact</a
-                        >
-                    </li>
-                    <li class="modal__list__item">
-                        <a href="blog.html" class="modal__link">Blog</a>
-                    </li>
+                <nav class="modal-navbar">
+                    <ul class="modal__list list">
+                        <li class="modal__list__item">
+                            <a href="index.html" class="modal__link">Home</a>
+                        </li>
+                        <li class="modal__list__item">
+                            <a href="works.html" class="modal__link">Works</a>
+                        </li>
+                        <li class="modal__list__item">
+                            <a href="logos.html" class="modal__link"
+                                >Logo Collection</a
+                            >
+                        </li>
+                        <li class="modal__list__item">
+                            <a href="about.html" class="modal__link"
+                                >About & Contact</a
+                            >
+                        </li>
+                        <li class="modal__list__item">
+                            <a href="blog.html" class="modal__link">Blog</a>
+                        </li>
+                    </ul>
                 </nav>
                 <span class="close-menu-button">x</span>
             </div>
@@ -60,23 +62,24 @@
             <div class="container">
                 <div class="projects__inner">
                     <div class="project">
-                        <h2 class="project__name">Project Title</h2>
+                        <h1 class="project__name">Project Title</h1>
                         <a href="singleproject.html" class="project__link"
                             ><img
-                                src="./src/images/covers/d1.jpg"
+                                src="./src/images/covers/aruscover.jpg"
                                 alt="project"
                                 class="project__image"
                         /></a>
                     </div>
                     <div class="project">
-                        <h2 class="project__name">Project Title</h2>
+                        <h1 class="project__name">Project Title</h1>
                         <a href="singleproject.html" class="project__link"
                             ><img
-                                src="./src/images/covers/d1.jpg"
+                                src="./src/images/covers/estudiocover.jpg"
                                 alt="project"
                                 class="project__image"
                         /></a>
                     </div>
+                    <a class="work-button" href="works.html">ALL WORKS</a>
                 </div>
             </div>
         </section>
@@ -92,7 +95,7 @@
             <div class="container">
                 <div class="footer__inner">
                     <div class="mail">
-                        <h2 class="mail__title">Get in Touch</h2>
+                        <p class="mail__title">Get in Touch</p>
                         <a href="mailto:hello@yoursite" class="mail__link"
                             >hello@yoursite</a
                         >
@@ -168,5 +171,6 @@
                 </div>
             </div>
         </footer>
+        <script src="./src/js/index.js"></script>
     </body>
 </html>
