feat: add modal section
also add basic layout for all pages

--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
     <body>
         <header class="header">
             <div class="header__inner">
-                <h2 class="header__title">K!sbag Design Studio</h2>
+                <a href="index.html" class="header__title"
+                    >K!sbag Design Studio</a
+                >
                 <button class="open-modal-button" type="button">Menu</button>
             </div>
         </header>
         <section class="modal">
-            <div class="modal__content">
+            <div class="modal__inner">
                 <h1 class="modal__title">K!sbag Design Studio</h1>
                 <nav class="modal-navbar">
                     <ul class="modal__list list">
@@ -47,11 +49,11 @@
                         </li>
                     </ul>
                 </nav>
-                <span class="close-menu-button">x</span>
+                <span class="close-modal-button">x</span>
             </div>
         </section>
         <section class="preview">
-            <div class="preview__content">
+            <div class="preview__inner">
                 <h1 class="preview__title">
                     Design & Development Solutions for Brands.
                 </h1>
@@ -79,7 +81,7 @@
                                 class="project__image"
                         /></a>
                     </div>
-                    <a class="work-button" href="works.html">ALL WORKS</a>
+                    <a class="works-button" href="works.html">ALL WORKS</a>
                 </div>
             </div>
         </section>
