--- a/singleproject.html
+++ b/singleproject.html
@@ -1,17 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./src/images/favicon.png" rel="shortcut icon">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="./public/css/main.css">
-    <title>K!sbag Design Studio</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link href="./src/images/favicon.png" rel="shortcut icon" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" href="./public/css/main.css" />
+        <title>K!sbag Design Studio</title>
+    </head>
+    <body>
+        <header class="header">
+            <div class="header__inner">
+                <a href="index.html" class="header__title"
+                    >K!sbag Design Studio</a
+                >
+                <button class="open-modal-button" type="button">Menu</button>
+            </div>
+        </header>
+        <section class="modal">
+            <div class="modal__inner">
+                <h1 class="modal__title">K!sbag Design Studio</h1>
+                <nav class="modal-navbar">
+                    <ul class="modal__list list">
+                        <li class="modal__list__item">
+                            <a href="index.html" class="modal__link">Home</a>
+                        </li>
+                        <li class="modal__list__item">
+                            <a href="works.html" class="modal__link">Works</a>
+                        </li>
+                        <li class="modal__list__item">
+                            <a href="logos.html" class="modal__link"
+                                >Logo Collection</a
+                            >
+                        </li>
+                        <li class="modal__list__item">
+                            <a href="about.html" class="modal__link"
+                                >About & Contact</a
+                            >
+                        </li>
+                        <li class="modal__list__item">
+                            <a href="blog.html" class="modal__link">Blog</a>
+                        </li>
+                    </ul>
+                </nav>
+                <span class="close-modal-button">x</span>
+            </div>
+        </section>
+        <footer class="footer">
+            <div class="container">
+                <div class="footer__inner">
+                    <div class="mail">
+                        <p class="mail__title">Get in Touch</p>
+                        <a href="mailto:hello@yoursite" class="mail__link"
+                            >hello@yoursite</a
+                        >
+                    </div>
+                    <div class="social-links">
+                        <ul class="social-links__list list">
+                            <li class="social-links__item">
+                                <a
+                                    href="https://Twitter.com"
+                                    class="social-link"
+                                    >Twitter</a
+                                >
+                            </li>
+                            <li class="social-links__item">
+                                <a
+                                    href="https://Instagram.com"
+                                    class="social-link"
+                                    >Instagram</a
+                                >
+                            </li>
+                            <li class="social-links__item">
+                                <a
+                                    href="https://Pinterest.com"
+                                    class="social-link"
+                                    >Pinterest</a
+                                >
+                            </li>
+                            <li class="social-links__item">
+                                <a
+                                    href="https://Dribbble.com"
+                                    class="social-link"
+                                    >Dribbble</a
+                                >
+                            </li>
+                            <li class="social-links__item">
+                                <a
+                                    href="https://Linkedin.com"
+                                    class="social-link"
+                                    >Linkedin</a
+                                >
+                            </li>
+                        </ul>
+                    </div>
+                    <nav class="footer-navbar">
+                        <ul class="footer-navbar__list list">
+                            <li class="footer-navbar__item">
+                                <a href="index.html" class="footer-navbar__link"
+                                    >Home</a
+                                >
+                            </li>
+                            <li class="footer-navbar__item">
+                                <a href="works.html" class="footer-navbar__link"
+                                    >Works</a
+                                >
+                            </li>
+                            <li class="footer-navbar__item">
+                                <a href="logos.html" class="footer-navbar__link"
+                                    >Logos</a
+                                >
+                            </li>
+                            <li class="footer-navbar__item">
+                                <a href="about.html" class="footer-navbar__link"
+                                    >About & Contact</a
+                                >
+                            </li>
+                            <li class="footer-navbar__item">
+                                <a href="blog.html" class="footer-navbar__link"
+                                    >Blog</a
+                                >
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </footer>
+        <script src="./src/js/index.js"></script>
+    </body>
 </html>
