feat: add two pages design

--- a/index.html
+++ b/index.html
@@ -60,25 +60,25 @@
                 <p class="preview__subtitle">Keep it simple</p>
             </div>
         </section>
-        <section class="projects">
+        <section class="projects-preview">
             <div class="container">
-                <div class="projects__inner">
-                    <div class="project">
-                        <h1 class="project__name">Project Title</h1>
-                        <a href="singleproject.html" class="project__link"
+                <div class="projects-preview__inner">
+                    <div class="project-preview">
+                        <h1 class="project-preview__name">Project Title</h1>
+                        <a href="singleproject.html" class="project-preview__link"
                             ><img
                                 src="./src/images/covers/aruscover.jpg"
                                 alt="project"
-                                class="project__image"
+                                class="project-preview__image"
                         /></a>
                     </div>
-                    <div class="project">
-                        <h1 class="project__name">Project Title</h1>
-                        <a href="singleproject.html" class="project__link"
+                    <div class="project-preview">
+                        <h1 class="project-preview__name">Project Title</h1>
+                        <a href="singleproject.html" class="project-preview__link"
                             ><img
                                 src="./src/images/covers/estudiocover.jpg"
                                 alt="project"
-                                class="project__image"
+                                class="project-preview__image"
                         /></a>
                     </div>
                     <a class="works-button" href="works.html">ALL WORKS</a>
