--- a/logos.html
+++ b/logos.html
@@ -58,6 +58,118 @@
                 <p class="preview__subtitle">Solutions & Designs</p>
             </div>
         </section>
+        <section class="logos">
+            <div class="container">
+                <div class="logos__inner">
+                    <div class="logo">
+                        <img
+                            src="./src/images/covers/d1.jpg"
+                            alt="logo"
+                            class="logo__image"
+                        />
+                    </div>
+                    <div class="logo">
+                        <img
+                            src="./src/images/covers/d1.jpg"
+                            alt="logo"
+                            class="logo__image"
+                        />
+                    </div>
+                    <div class="logo">
+                        <img
+                            src="./src/images/covers/d1.jpg"
+                            alt="logo"
+                            class="logo__image"
+                        />
+                    </div>
+                    <div class="logo">
+                        <img
+                            src="./src/images/covers/d1.jpg"
+                            alt="logo"
+                            class="logo__image"
+                        />
+                    </div>
+                    <div class="logo">
+                        <img
+                            src="./src/images/covers/d1.jpg"
+                            alt="logo"
+                            class="logo__image"
+                        />
+                    </div>
+                    <div class="logo">
+                        <img
+                            src="./src/images/covers/d1.jpg"
+                            alt="logo"
+                            class="logo__image"
+                        />
+                    </div>
+                    <div class="logo">
+                        <img
+                            src="./src/images/covers/d1.jpg"
+                            alt="logo"
+                            class="logo__image"
+                        />
+                    </div>
+                    <div class="logo">
+                        <img
+                            src="./src/images/covers/d1.jpg"
+                            alt="logo"
+                            class="logo__image"
+                        />
+                    </div>
+                    <div class="logo">
+                        <img
+                            src="./src/images/covers/d1.jpg"
+                            alt="logo"
+                            class="logo__image"
+                        />
+                    </div>
+                    <div class="logo">
+                        <img
+                            src="./src/images/covers/d1.jpg"
+                            alt="logo"
+                            class="logo__image"
+                        />
+                    </div>
+                    <div class="logo">
+                        <img
+                            src="./src/images/covers/d1.jpg"
+                            alt="logo"
+                            class="logo__image"
+                        />
+                    </div>
+                    <div class="logo">
+                        <img
+                            src="./src/images/covers/d1.jpg"
+                            alt="logo"
+                            class="logo__image"
+                        />
+                    </div>
+                    <div class="logo">
+                        <img
+                            src="./src/images/covers/d1.jpg"
+                            alt="logo"
+                            class="logo__image"
+                        />
+                    </div>
+                    <div class="logo">
+                        <img
+                            src="./src/images/covers/d1.jpg"
+                            alt="logo"
+                            class="logo__image"
+                        />
+                    </div>
+                    <div class="logo">
+                        <img
+                            src="./src/images/covers/d1.jpg"
+                            alt="logo"
+                            class="logo__image"
+                        />
+                    </div>
+                    <a class="works-button" href="works.html">ALL WORKS</a>
+                </div>
+            </div>
+        </section>
         <section class="big-buttons">
             <div class="container">
                 <div class="big-buttons__inner">
