--- a/works.html
+++ b/works.html
@@ -58,6 +58,182 @@
                 <p class="preview__subtitle">Happy Brands</p>
             </div>
         </section>
+        <section class="projects">
+            <div class="container">
+                <div class="projects__inner">
+                    <div class="project">
+                        <div class="project__content">
+                            <a href="singleproject.html" class="project__link"
+                                ><img
+                                    src="./src/images/covers/d1.jpg"
+                                    alt="project-image"
+                                    class="project__image"
+                            /></a>
+                        </div>
+                        <div class="project__info">
+                            <h2 class="project__title">Project Title</h2>
+                            <p class="project__subtitle">Branding, Identity</p>
+                            <p class="project__place">
+                                Based in City or Country
+                            </p>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div class="project__content">
+                            <a href="singleproject.html" class="project__link"
+                                ><img
+                                    src="./src/images/covers/d1.jpg"
+                                    alt="project-image"
+                                    class="project__image"
+                            /></a>
+                        </div>
+                        <div class="project__info">
+                            <h2 class="project__title">Project Title</h2>
+                            <p class="project__subtitle">Branding, Identity</p>
+                            <p class="project__place">
+                                Based in City or Country
+                            </p>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div class="project__content">
+                            <a href="singleproject.html" class="project__link"
+                                ><img
+                                    src="./src/images/covers/d1.jpg"
+                                    alt="project-image"
+                                    class="project__image"
+                            /></a>
+                        </div>
+                        <div class="project__info">
+                            <h2 class="project__title">Project Title</h2>
+                            <p class="project__subtitle">Branding, Identity</p>
+                            <p class="project__place">
+                                Based in City or Country
+                            </p>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div class="project__content">
+                            <a href="singleproject.html" class="project__link"
+                                ><img
+                                    src="./src/images/covers/d1.jpg"
+                                    alt="project-image"
+                                    class="project__image"
+                            /></a>
+                        </div>
+                        <div class="project__info">
+                            <h2 class="project__title">Project Title</h2>
+                            <p class="project__subtitle">Branding, Identity</p>
+                            <p class="project__place">
+                                Based in City or Country
+                            </p>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div class="project__content">
+                            <a href="singleproject.html" class="project__link"
+                                ><img
+                                    src="./src/images/covers/d1.jpg"
+                                    alt="project-image"
+                                    class="project__image"
+                            /></a>
+                        </div>
+                        <div class="project__info">
+                            <h2 class="project__title">Project Title</h2>
+                            <p class="project__subtitle">Branding, Identity</p>
+                            <p class="project__place">
+                                Based in City or Country
+                            </p>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div class="project__content">
+                            <a href="singleproject.html" class="project__link"
+                                ><img
+                                    src="./src/images/covers/d1.jpg"
+                                    alt="project-image"
+                                    class="project__image"
+                            /></a>
+                        </div>
+                        <div class="project__info">
+                            <h2 class="project__title">Project Title</h2>
+                            <p class="project__subtitle">Branding, Identity</p>
+                            <p class="project__place">
+                                Based in City or Country
+                            </p>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div class="project__content">
+                            <a href="singleproject.html" class="project__link"
+                                ><img
+                                    src="./src/images/covers/d1.jpg"
+                                    alt="project-image"
+                                    class="project__image"
+                            /></a>
+                        </div>
+                        <div class="project__info">
+                            <h2 class="project__title">Project Title</h2>
+                            <p class="project__subtitle">Branding, Identity</p>
+                            <p class="project__place">
+                                Based in City or Country
+                            </p>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div class="project__content">
+                            <a href="singleproject.html" class="project__link"
+                                ><img
+                                    src="./src/images/covers/d1.jpg"
+                                    alt="project-image"
+                                    class="project__image"
+                            /></a>
+                        </div>
+                        <div class="project__info">
+                            <h2 class="project__title">Project Title</h2>
+                            <p class="project__subtitle">Branding, Identity</p>
+                            <p class="project__place">
+                                Based in City or Country
+                            </p>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div class="project__content">
+                            <a href="singleproject.html" class="project__link"
+                                ><img
+                                    src="./src/images/covers/d1.jpg"
+                                    alt="project-image"
+                                    class="project__image"
+                            /></a>
+                        </div>
+                        <div class="project__info">
+                            <h2 class="project__title">Project Title</h2>
+                            <p class="project__subtitle">Branding, Identity</p>
+                            <p class="project__place">
+                                Based in City or Country
+                            </p>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div class="project__content">
+                            <a href="singleproject.html" class="project__link"
+                                ><img
+                                    src="./src/images/covers/d1.jpg"
+                                    alt="project-image"
+                                    class="project__image"
+                            /></a>
+                        </div>
+                        <div class="project__info">
+                            <h2 class="project__title">Project Title</h2>
+                            <p class="project__subtitle">Branding, Identity</p>
+                            <p class="project__place">
+                                Based in City or Country
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="big-buttons">
             <div class="container">
                 <div class="big-buttons__inner">
