feat: add slideshow and about page design

--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
                 <div class="projects-preview__inner">
                     <div class="project-preview">
                         <h1 class="project-preview__name">Project Title</h1>
-                        <a href="singleproject.html" class="project-preview__link"
+                        <a
+                            href="singleproject.html"
+                            class="project-preview__link"
                             ><img
                                 src="./src/images/covers/aruscover.jpg"
                                 alt="project"
@@ -74,7 +76,9 @@
                     </div>
                     <div class="project-preview">
                         <h1 class="project-preview__name">Project Title</h1>
-                        <a href="singleproject.html" class="project-preview__link"
+                        <a
+                            href="singleproject.html"
+                            class="project-preview__link"
                             ><img
                                 src="./src/images/covers/estudiocover.jpg"
                                 alt="project"
@@ -155,7 +159,7 @@
                             </li>
                             <li class="footer-navbar__item">
                                 <a href="logos.html" class="footer-navbar__link"
-                                    >Logos</a
+                                    >Logo Collection</a
                                 >
                             </li>
                             <li class="footer-navbar__item">
