--- a/singleproject.html
+++ b/singleproject.html
@@ -52,6 +52,46 @@
                 <span class="close-modal-button">x</span>
             </div>
         </section>
+        <section class="slideshow">
+            <div class="container">
+                <div class="slideshow__inner">
+                    <div class="slideshow__wrapper">
+                        <div class="slideshow__item">
+                            <img
+                                src="./src/images/covers/fixcover.jpg"
+                                alt="slide-1"
+                                class="slideshow__image"
+                            />
+                        </div>
+                        <div class="slideshow__item">
+                            <img
+                                src="./src/images/covers/logos.jpg"
+                                alt="slide-2"
+                                class="slideshow__image"
+                            />
+                        </div>
+                        <div class="slideshow__item">
+                            <img
+                                src="./src/images/covers/bettercover.jpg"
+                                alt="slide-3"
+                                class="slideshow__image"
+                            />
+                        </div>
+                        <a class="slideshow__prev slideshow__button"
+                            >&#10094;</a
+                        >
+                        <a class="slideshow__next slideshow__button"
+                            >&#10095;</a
+                        >
+                    </div>
+                    <div class="slideshow__dots">
+                        <span class="slideshow__dot"></span>
+                        <span class="slideshow__dot"></span>
+                        <span class="slideshow__dot"></span>
+                    </div>
+                </div>
+            </div>
+        </section>
         <footer class="footer">
             <div class="container">
                 <div class="footer__inner">
@@ -114,7 +154,7 @@
                             </li>
                             <li class="footer-navbar__item">
                                 <a href="logos.html" class="footer-navbar__link"
-                                    >Logos</a
+                                    >Logo Collection</a
                                 >
                             </li>
                             <li class="footer-navbar__item">
@@ -133,5 +173,6 @@
             </div>
         </footer>
         <script src="./src/js/index.js"></script>
+        <script src="./src/js/slideshow.js"></script>
     </body>
 </html>
