--- a/about.html
+++ b/about.html
@@ -52,10 +52,141 @@
                 <span class="close-modal-button">x</span>
             </div>
         </section>
+        <section class="slideshow">
+            <div class="container">
+                <div class="slideshow__inner">
+                    <div class="slideshow__wrapper">
+                        <div class="slideshow__item">
+                            <img
+                                src="./src/images/covers/fixcover.jpg"
+                                alt="slide-1"
+                                class="slideshow__image"
+                            />
+                        </div>
+                        <div class="slideshow__item">
+                            <img
+                                src="./src/images/covers/logos.jpg"
+                                alt="slide-2"
+                                class="slideshow__image"
+                            />
+                        </div>
+                        <div class="slideshow__item">
+                            <img
+                                src="./src/images/covers/bettercover.jpg"
+                                alt="slide-3"
+                                class="slideshow__image"
+                            />
+                        </div>
+                        <a class="slideshow__prev slideshow__button"
+                            >&#10094;</a
+                        >
+                        <a class="slideshow__next slideshow__button"
+                            >&#10095;</a
+                        >
+                    </div>
+                    <div class="slideshow__dots">
+                        <span class="slideshow__dot"></span>
+                        <span class="slideshow__dot"></span>
+                        <span class="slideshow__dot"></span>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="about">
+            <div class="container">
+                <div class="about__inner">
+                    <div class="about__info">
+                        <h1 class="about__title">About Us</h1>
+                        <p class="about__text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit, sed do eiusmod tempor incididunt ut labore et
+                            dolore magna aliqua. Ut enim ad minim veniam, quis
+                            nostrud exercitation ullamco laboris nisi ut aliquip
+                            ex ea commodo consequat.
+                        </p>
+                    </div>
+                    <div class="about__image">
+                        <img src="./src/images/d1.jpg" alt="about-image" />
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="description">
+            <div class="container">
+                <div class="description__inner">
+                    <div class="description__items">
+                        <div class="description__item">
+                            <h1 class="description__title">Our Standarts</h1>
+                            <p class="description__text">
+                                Lorem ipsum dolor sit amet, consectetur
+                                adipiscing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magna aliqua. Ut
+                                enim ad minim veniam, quis nostrud exercitation
+                                ullamco laboris nisi ut aliquip ex ea commodo
+                                consequat.
+                            </p>
+                        </div>
+                        <div class="description__item">
+                            <h1 class="description__title">Why We Do It</h1>
+                            <p class="description__text">
+                                Lorem ipsum dolor sit amet, consectetur
+                                adipiscing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magna aliqua. Ut
+                                enim ad minim veniam, quis nostrud exercitation
+                                ullamco laboris nisi ut aliquip ex ea commodo
+                                consequat.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="description__image">
+                        <img src="./src/images/d1.jpg" alt="photo" />
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="summary">
+            <div class="container">
+                <div class="summary__inner">
+                    <div class="summary__item">
+                        <h1 class="summary__title">What We Do</h1>
+                        <ul class="summary__list list">
+                            <li class="summary__list__item">Branding</li>
+                            <li class="summary__list__item">Web Design</li>
+                            <li class="summary__list__item">Illustration</li>
+                            <li class="summary__list__item">Development</li>
+                        </ul>
+                    </div>
+                    <div class="summary__item">
+                        <h1 class="summary__title">Career</h1>
+                        <ul class="summary__list list">
+                            <li class="summary__list__item">
+                                <a
+                                    href="mailto:jobs@yoursite"
+                                    class="summary__link"
+                                    >jobs@yoursite</a
+                                >
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="summary__item">
+                        <h1 class="summary__title">Start a Project</h1>
+                        <ul class="summary__list list">
+                            <li class="summary__list__item">
+                                <a
+                                    href="mailto:hello@yoursite"
+                                    class="summary__link"
+                                    >hello@yoursite</a
+                                >
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="big-buttons">
             <div class="container">
                 <div class="big-buttons__inner">
-                    <a href="about.html" class="big-button">ABOUT</a
+                    <a href="works.html" class="big-button">WORKS</a
                     ><a href="logos.html" class="big-button">LOGOS</a>
                 </div>
             </div>
@@ -122,7 +253,7 @@
                             </li>
                             <li class="footer-navbar__item">
                                 <a href="logos.html" class="footer-navbar__link"
-                                    >Logos</a
+                                    >Logo Collection</a
                                 >
                             </li>
                             <li class="footer-navbar__item">
@@ -141,5 +272,6 @@
             </div>
         </footer>
         <script src="./src/js/index.js"></script>
+        <script src="./src/js/slideshow.js"></script>
     </body>
 </html>
