--- a/blog.html
+++ b/blog.html
@@ -163,8 +163,8 @@
         <section class="big-buttons">
             <div class="container">
                 <div class="big-buttons__inner">
-                    <a href="about.html" class="big-button">ABOUT</a
-                    ><a href="logos.html" class="big-button">LOGOS</a>
+                    <a href="works.html" class="big-button">WORKS</a
+                    ><a href="about.html" class="big-button">ABOUT</a>
                 </div>
             </div>
         </section>
@@ -230,7 +230,7 @@
                             </li>
                             <li class="footer-navbar__item">
                                 <a href="logos.html" class="footer-navbar__link"
-                                    >Logos</a
+                                    >Logo Collection</a
                                 >
                             </li>
                             <li class="footer-navbar__item">
