--- a/logos.html
+++ b/logos.html
@@ -174,7 +174,7 @@
             <div class="container">
                 <div class="big-buttons__inner">
                     <a href="about.html" class="big-button">ABOUT</a
-                    ><a href="logos.html" class="big-button">LOGOS</a>
+                    ><a href="blog.html" class="big-button">BLOG</a>
                 </div>
             </div>
         </section>
@@ -240,7 +240,7 @@
                             </li>
                             <li class="footer-navbar__item">
                                 <a href="logos.html" class="footer-navbar__link"
-                                    >Logos</a
+                                    >Logo Collection</a
                                 >
                             </li>
                             <li class="footer-navbar__item">
