--- a/works.html
+++ b/works.html
@@ -304,7 +304,7 @@
                             </li>
                             <li class="footer-navbar__item">
                                 <a href="logos.html" class="footer-navbar__link"
-                                    >Logos</a
+                                    >Logo Collection</a
                                 >
                             </li>
                             <li class="footer-navbar__item">
