feat: add singleproject page design
also delete unused images and fix path to images in html

--- a/about.html
+++ b/about.html
@@ -58,21 +58,21 @@
                     <div class="slideshow__wrapper">
                         <div class="slideshow__item">
                             <img
-                                src="./src/images/covers/fixcover.jpg"
+                                src="./src/images/fixcover.jpg"
                                 alt="slide-1"
                                 class="slideshow__image"
                             />
                         </div>
                         <div class="slideshow__item">
                             <img
-                                src="./src/images/covers/logos.jpg"
+                                src="./src/images/logos.jpg"
                                 alt="slide-2"
                                 class="slideshow__image"
                             />
                         </div>
                         <div class="slideshow__item">
                             <img
-                                src="./src/images/covers/bettercover.jpg"
+                                src="./src/images/bettercover.jpg"
                                 alt="slide-3"
                                 class="slideshow__image"
                             />
