--- a/blog.html
+++ b/blog.html
@@ -65,7 +65,7 @@
                         <div class="post__content">
                             <a href="#" class="post__link"
                                 ><img
-                                    src="./src/images/covers/d1.jpg"
+                                    src="./src/images/d1.jpg"
                                     alt="post-image"
                                     class="post__image"
                             /></a>
@@ -81,7 +81,7 @@
                         <div class="post__content">
                             <a href="#" class="post__link"
                                 ><img
-                                    src="./src/images/covers/d1.jpg"
+                                    src="./src/images/d1.jpg"
                                     alt="post-image"
                                     class="post__image"
                             /></a>
@@ -97,7 +97,7 @@
                         <div class="post__content">
                             <a href="#" class="post__link"
                                 ><img
-                                    src="./src/images/covers/d1.jpg"
+                                    src="./src/images/d1.jpg"
                                     alt="post-image"
                                     class="post__image"
                             /></a>
@@ -113,7 +113,7 @@
                         <div class="post__content">
                             <a href="#" class="post__link"
                                 ><img
-                                    src="./src/images/covers/d1.jpg"
+                                    src="./src/images/d1.jpg"
                                     alt="post-image"
                                     class="post__image"
                             /></a>
@@ -129,7 +129,7 @@
                         <div class="post__content">
                             <a href="#" class="post__link"
                                 ><img
-                                    src="./src/images/covers/d1.jpg"
+                                    src="./src/images/d1.jpg"
                                     alt="post-image"
                                     class="post__image"
                             /></a>
@@ -145,7 +145,7 @@
                         <div class="post__content">
                             <a href="#" class="post__link"
                                 ><img
-                                    src="./src/images/covers/d1.jpg"
+                                    src="./src/images/d1.jpg"
                                     alt="post-image"
                                     class="post__image"
                             /></a>
