--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             href="singleproject.html"
                             class="project-preview__link"
                             ><img
-                                src="./src/images/covers/aruscover.jpg"
+                                src="./src/images/d1.jpg"
                                 alt="project"
                                 class="project-preview__image"
                         /></a>
@@ -80,7 +80,7 @@
                             href="singleproject.html"
                             class="project-preview__link"
                             ><img
-                                src="./src/images/covers/estudiocover.jpg"
+                                src="./src/images/d1.jpg"
                                 alt="project"
                                 class="project-preview__image"
                         /></a>
