--- a/logos.html
+++ b/logos.html
@@ -63,105 +63,105 @@
                 <div class="logos__inner">
                     <div class="logo">
                         <img
-                            src="./src/images/covers/d1.jpg"
+                            src="./src/images/d1.jpg"
                             alt="logo"
                             class="logo__image"
                         />
                     </div>
                     <div class="logo">
                         <img
-                            src="./src/images/covers/d1.jpg"
+                            src="./src/images/d1.jpg"
                             alt="logo"
                             class="logo__image"
                         />
                     </div>
                     <div class="logo">
                         <img
-                            src="./src/images/covers/d1.jpg"
+                            src="./src/images/d1.jpg"
                             alt="logo"
                             class="logo__image"
                         />
                     </div>
                     <div class="logo">
                         <img
-                            src="./src/images/covers/d1.jpg"
+                            src="./src/images/d1.jpg"
                             alt="logo"
                             class="logo__image"
                         />
                     </div>
                     <div class="logo">
                         <img
-                            src="./src/images/covers/d1.jpg"
+                            src="./src/images/d1.jpg"
                             alt="logo"
                             class="logo__image"
                         />
                     </div>
                     <div class="logo">
                         <img
-                            src="./src/images/covers/d1.jpg"
+                            src="./src/images/d1.jpg"
                             alt="logo"
                             class="logo__image"
                         />
                     </div>
                     <div class="logo">
                         <img
-                            src="./src/images/covers/d1.jpg"
+                            src="./src/images/d1.jpg"
                             alt="logo"
                             class="logo__image"
                         />
                     </div>
                     <div class="logo">
                         <img
-                            src="./src/images/covers/d1.jpg"
+                            src="./src/images/d1.jpg"
                             alt="logo"
                             class="logo__image"
                         />
                     </div>
                     <div class="logo">
                         <img
-                            src="./src/images/covers/d1.jpg"
+                            src="./src/images/d1.jpg"
                             alt="logo"
                             class="logo__image"
                         />
                     </div>
                     <div class="logo">
                         <img
-                            src="./src/images/covers/d1.jpg"
+                            src="./src/images/d1.jpg"
                             alt="logo"
                             class="logo__image"
                         />
                     </div>
                     <div class="logo">
                         <img
-                            src="./src/images/covers/d1.jpg"
+                            src="./src/images/d1.jpg"
                             alt="logo"
                             class="logo__image"
                         />
                     </div>
                     <div class="logo">
                         <img
-                            src="./src/images/covers/d1.jpg"
+                            src="./src/images/d1.jpg"
                             alt="logo"
                             class="logo__image"
                         />
                     </div>
                     <div class="logo">
                         <img
-                            src="./src/images/covers/d1.jpg"
+                            src="./src/images/d1.jpg"
                             alt="logo"
                             class="logo__image"
                         />
                     </div>
                     <div class="logo">
                         <img
-                            src="./src/images/covers/d1.jpg"
+                            src="./src/images/d1.jpg"
                             alt="logo"
                             class="logo__image"
                         />
                     </div>
                     <div class="logo">
                         <img
-                            src="./src/images/covers/d1.jpg"
+                            src="./src/images/d1.jpg"
                             alt="logo"
                             class="logo__image"
                         />
