--- a/works.html
+++ b/works.html
@@ -65,7 +65,7 @@
                         <div class="project__content">
                             <a href="singleproject.html" class="project__link"
                                 ><img
-                                    src="./src/images/covers/d1.jpg"
+                                    src="./src/images/d1.jpg"
                                     alt="project-image"
                                     class="project__image"
                             /></a>
@@ -82,7 +82,7 @@
                         <div class="project__content">
                             <a href="singleproject.html" class="project__link"
                                 ><img
-                                    src="./src/images/covers/d1.jpg"
+                                    src="./src/images/d1.jpg"
                                     alt="project-image"
                                     class="project__image"
                             /></a>
@@ -99,7 +99,7 @@
                         <div class="project__content">
                             <a href="singleproject.html" class="project__link"
                                 ><img
-                                    src="./src/images/covers/d1.jpg"
+                                    src="./src/images/d1.jpg"
                                     alt="project-image"
                                     class="project__image"
                             /></a>
@@ -116,7 +116,7 @@
                         <div class="project__content">
                             <a href="singleproject.html" class="project__link"
                                 ><img
-                                    src="./src/images/covers/d1.jpg"
+                                    src="./src/images/d1.jpg"
                                     alt="project-image"
                                     class="project__image"
                             /></a>
@@ -133,7 +133,7 @@
                         <div class="project__content">
                             <a href="singleproject.html" class="project__link"
                                 ><img
-                                    src="./src/images/covers/d1.jpg"
+                                    src="./src/images/d1.jpg"
                                     alt="project-image"
                                     class="project__image"
                             /></a>
@@ -150,7 +150,7 @@
                         <div class="project__content">
                             <a href="singleproject.html" class="project__link"
                                 ><img
-                                    src="./src/images/covers/d1.jpg"
+                                    src="./src/images/d1.jpg"
                                     alt="project-image"
                                     class="project__image"
                             /></a>
@@ -167,7 +167,7 @@
                         <div class="project__content">
                             <a href="singleproject.html" class="project__link"
                                 ><img
-                                    src="./src/images/covers/d1.jpg"
+                                    src="./src/images/d1.jpg"
                                     alt="project-image"
                                     class="project__image"
                             /></a>
@@ -184,7 +184,7 @@
                         <div class="project__content">
                             <a href="singleproject.html" class="project__link"
                                 ><img
-                                    src="./src/images/covers/d1.jpg"
+                                    src="./src/images/d1.jpg"
                                     alt="project-image"
                                     class="project__image"
                             /></a>
@@ -201,7 +201,7 @@
                         <div class="project__content">
                             <a href="singleproject.html" class="project__link"
                                 ><img
-                                    src="./src/images/covers/d1.jpg"
+                                    src="./src/images/d1.jpg"
                                     alt="project-image"
                                     class="project__image"
                             /></a>
@@ -218,7 +218,7 @@
                         <div class="project__content">
                             <a href="singleproject.html" class="project__link"
                                 ><img
-                                    src="./src/images/covers/d1.jpg"
+                                    src="./src/images/d1.jpg"
                                     alt="project-image"
                                     class="project__image"
                             /></a>
