--- a/singleproject.html
+++ b/singleproject.html
@@ -58,21 +58,21 @@
                     <div class="slideshow__wrapper">
                         <div class="slideshow__item">
                             <img
-                                src="./src/images/covers/fixcover.jpg"
+                                src="./src/images/fixcover.jpg"
                                 alt="slide-1"
                                 class="slideshow__image"
                             />
                         </div>
                         <div class="slideshow__item">
                             <img
-                                src="./src/images/covers/logos.jpg"
+                                src="./src/images/logos.jpg"
                                 alt="slide-2"
                                 class="slideshow__image"
                             />
                         </div>
                         <div class="slideshow__item">
                             <img
-                                src="./src/images/covers/bettercover.jpg"
+                                src="./src/images/bettercover.jpg"
                                 alt="slide-3"
                                 class="slideshow__image"
                             />
@@ -89,6 +89,130 @@
                         <span class="slideshow__dot"></span>
                         <span class="slideshow__dot"></span>
                     </div>
+                </div>
+            </div>
+        </section>
+        <section class="about">
+            <div class="container">
+                <div class="about__inner">
+                    <div class="about__info">
+                        <h1 class="about__title">Project Title</h1>
+                        <p class="about__text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit, sed do eiusmod tempor incididunt ut labore et
+                            dolore magna aliqua. Ut enim ad minim veniam, quis
+                            nostrud exercitation ullamco laboris nisi ut aliquip
+                            ex ea commodo consequat.
+                        </p>
+                    </div>
+                    <div class="about__image">
+                        <img src="./src/images/d1.jpg" alt="about-image" />
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="project-description">
+            <div class="container">
+                <div class="project-description__inner">
+                    <div class="project-description__items">
+                        <div class="project-description__item">
+                            <h1 class="project-description__item__title">
+                                Project Date
+                            </h1>
+                            <p class="project-description__item__text">2018</p>
+                        </div>
+                        <div class="project-description__item">
+                            <h1 class="project-description__item__title">
+                                The Challenge
+                            </h1>
+                            <p class="project-description__item__text">
+                                Lorem ipsum dolor sit amet, consectetur
+                                adipiscing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magna aliqua. Ut
+                                enim ad minim veniam, quis nostrud exercitation
+                                ullamco laboris nisi ut aliquip ex ea commodo
+                                consequat.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="project-description__items">
+                        <div class="project-description__image">
+                            <img
+                                src="./src/images/d1.jpg"
+                                alt="project-image"
+                            />
+                        </div>
+                        <div class="project-description__image">
+                            <img
+                                src="./src/images/d1.jpg"
+                                alt="project-image"
+                            />
+                        </div>
+                        <div class="project-description__image">
+                            <img
+                                src="./src/images/d1.jpg"
+                                alt="project-image"
+                            />
+                        </div>
+                    </div>
+                    <div class="project-description__items">
+                        <div class="project-description__item">
+                            <h1 class="project-description__item__title">
+                                Project Role
+                            </h1>
+                            <p class="project-description__item__text">
+                                Branding, Visual Identity, Web Design,
+                                Illustration
+                            </p>
+                        </div>
+                        <div class="project-description__item">
+                            <h1 class="project-description__item__title">
+                                Our Approach
+                            </h1>
+                            <p class="project-description__item__text">
+                                Lorem ipsum dolor sit amet, consectetur
+                                adipiscing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magna aliqua. Ut
+                                enim ad minim veniam, quis nostrud exercitation
+                                ullamco laboris nisi ut aliquip ex ea commodo
+                                consequat.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="gallery">
+            <div class="container">
+                <div class="gallery__inner">
+                    <div class="gallery__items">
+                        <div class="gallery__item">
+                            <img
+                                src="./src/images/d1.jpg"
+                                alt="gallery__image"
+                                class="gallery__image gallery__image_small"
+                            />
+                        </div>
+                        <div class="gallery__item">
+                            <img
+                                src="./src/images/d1.jpg"
+                                alt="gallery__image"
+                                class="gallery__image gallery__image_small"
+                            />
+                        </div>
+                    </div>
+                    <div class="gallery__items">
+                        <div class="gallery__item">
+                            <img
+                                src="./src/images/d1.jpg"
+                                alt="gallery__image"
+                                class="gallery__image gallery__image_big"
+                            />
+                        </div>
+                    </div>
+                    <a class="works-button" href="works.html"
+                        >BACK TO ALL WORKS</a
+                    >
                 </div>
             </div>
         </section>
